# game_discount_discord_webhook

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  USAGE.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: notify.yml
data/: state.json
docs/: index.html  watchlist.json
src/dealbot/: __init__.py  __main__.py  config.py  models.py  notifier.py  run.py  state.py
src/dealbot/sources/: __init__.py  itad.py
tests/: test_config.py  test_itad.py  test_run.py  test_state.py
worker/: README.md  wrangler.toml
worker/src/: worker.js
